@@ -38,13 +38,17 @@ plotHHH4_fitted <- function (x, units = 1, names = NULL,
                              par.settings = list(),
                              legend = TRUE, legend.args = list(),
                              legend.observed = FALSE,
-                             decompose = NULL, meanHHH = NULL, ...)
+                             decompose = NULL, total = FALSE, meanHHH = NULL, ...)
 {
-    if (is.null(units)) units <- seq_len(x$nUnit)
+    if (total) {
+        units <- "Overall"  # only used as a label
+    } else if (is.null(units)) {
+        units <- seq_len(x$nUnit)
+    }
     if (!is.null(names)) stopifnot(length(units) == length(names))
     if (isTRUE(decompose)) decompose <- colnames(x$stsObj)
 
-    ## get decomposed mean
+    ## get decomposed mean => no need to compute it in each plotHHH4_fitted1()
     if (is.null(meanHHH)) {
         meanHHH <- if (is.null(decompose)) {
             meanHHH(x$coefficients, terms.hhh4(x))
@@ -59,7 +63,7 @@ plotHHH4_fitted <- function (x, units = 1, names = NULL,
         pt.col <- col[4L]
         rev(col[-4L])
     } else {
-        plotHHH4_fitted_check_col_decompose(col, decompose, x$nUnit)
+        plotHHH4_fitted_check_col_decompose(col, decompose)
     }
 
     ## setup graphical parameters
@@ -100,19 +104,20 @@ plotHHH4_fitted <- function (x, units = 1, names = NULL,
     meanHHHunits <- vector(mode="list", length=length(units))
     names(meanHHHunits) <- if (is.character(units)) units else colnames(x$stsObj)[units]
     for(i in seq_along(units)) {
-        meanHHHunits[[i]] <- plotHHH4_fitted1(x, units[i], main=names[i],
+        meanHHHunits[[i]] <- plotHHH4_fitted1(x, unit=units[i], main=names[i],
                                               col=col, pch=pch, pt.cex=pt.cex, pt.col=pt.col,
-                                              decompose=decompose, meanHHH=meanHHH, ...)
+                                              decompose=decompose, total=total, meanHHH=meanHHH, ...)
         if (i %in% legend) do.call("legend", args=legend.args)
     }
     invisible(meanHHHunits)
 }
 
-plotHHH4_fitted_check_col_decompose <- function (col, decompose, nUnit)
+plotHHH4_fitted_check_col_decompose <- function (col, decompose)
 {
     if (is.null(decompose)) {
         stopifnot(length(col) == 3L)
     } else {
+        nUnit <- length(decompose)
         if (length(col) == nUnit) {
             col <- c("grey85", col)  # first color is for "endemic"
         } else if (length(col) != 1L + nUnit) {
@@ -131,17 +136,19 @@ plotHHH4_fitted1 <- function(x, unit=1, main=NULL,
                              pch=19, pt.cex=0.6, pt.col=1, border=col,
                              start=x$stsObj@start, end=NULL, xaxis=NULL,
                              xlim=NULL, ylim=NULL, xlab="", ylab="No. infected",
-                             hide0s=FALSE, decompose=NULL, meanHHH=NULL)
+                             hide0s=FALSE, decompose=NULL, total=FALSE, meanHHH=NULL)
 {
     stsObj <- x$stsObj
-    if (is.character(unit) &&
+    if (!total && is.character(unit) &&
         is.na(unit <- match(.unit <- unit, colnames(stsObj))))
         stop("region '", .unit, "' does not exist")
-    if (is.null(main)) main <- colnames(stsObj)[unit]
-    if (isTRUE(decompose)) decompose <- colnames(stsObj)
+    if (is.null(main))
+        main <- if (total) "Overall" else colnames(stsObj)[unit]
+    if (isTRUE(decompose))
+        decompose <- colnames(stsObj)
 
     ## get observed counts
-    obs <- observed(stsObj)[,unit]
+    obs <- if (total) rowSums(observed(stsObj)) else observed(stsObj)[,unit]
 
     ## time range for plotting
     start0 <- yearepoch2point(stsObj@start, stsObj@freq, toleft=TRUE)
@@ -162,16 +169,27 @@ plotHHH4_fitted1 <- function(x, unit=1, main=NULL,
     }
 
     ## get fitted component means
+    if (is.null(meanHHH)) {
+        meanHHH <- if (is.null(decompose)) {
+            meanHHH(x$coefficients, terms.hhh4(x))
+        } else {
+            decompose.hhh4(x)
+        }
+    }
     meanHHHunit <- if (is.null(decompose)) {
-        if (is.null(meanHHH))
-            meanHHH <- meanHHH(x$coefficients, terms.hhh4(x))
-        sapply(meanHHH, "[", i=TRUE, j=unit)
+        if (total) {
+            sapply(meanHHH, rowSums)
+        } else {
+            sapply(meanHHH, "[", i=TRUE, j=unit)
+        }
     } else {
-        if (is.null(meanHHH))
-            meanHHH <- decompose.hhh4(x)
         if (!setequal(decompose, dimnames(meanHHH)[[3L]][-1L]))
             stop("'decompose' must be (a permutation of) the fitted units")
-        meanHHH[,unit,c("endemic",decompose)]
+        if (total) {
+            apply(meanHHH[,,c("endemic",decompose)], c(1L, 3L), sum)
+        } else {
+            meanHHH[,unit,c("endemic",decompose)]
+        }
     }
     stopifnot(is.matrix(meanHHHunit), !is.null(colnames(meanHHHunit)),
               nrow(meanHHHunit) == length(x$control$subset))
@@ -188,7 +206,7 @@ plotHHH4_fitted1 <- function(x, unit=1, main=NULL,
         pt.col <- col[4L]
         rev(col[-4L])
     } else {
-        plotHHH4_fitted_check_col_decompose(col, decompose, x$nUnit)
+        plotHHH4_fitted_check_col_decompose(col, decompose)
     }
 
     ## establish basic plot window
